--- a/Ex25_Project/src/main/resources/templates/menuweb.html
+++ b/Ex25_Project/src/main/resources/templates/menuweb.html
@@ -316,7 +316,7 @@
 	        
 	        
 	        
-		  //더보기 기능 사라짐
+		  //count 보다 작으면 더보기 기능 사라짐
 	        if(count > values.length){
 	        	
 	        	$("#toggle").remove();
